# IbUpdateLib

./: .gitignore  CMakeLists.txt  LICENSE
.NET/: IbUpdateLib.sln  README.md
.NET/Ib.Update/: GitHubUpdater.cs  Ib.Update.csproj
.NET/Test/: GitHubUpdaterTest.cs  Test.csproj
.NET/UpdateLib/: GitHubUpdater.cs  UpdateLib.csproj
C++/: CMakeLists.txt  README.md
C++/include/IbUpdate/: GitHubUpdater.hpp
C++/source/: GitHubUpdater.cpp
C++/test/: GitHubUpdater.cpp
